--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/52865452.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/img/52865452.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="An intuitive online IDE with integrated whiteboard ✨"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/52865452.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/52865452.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>HashDefine IDE</title>
   </head>
